--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-	
+<audio controls autoplay>
+	  <source src="https://deeznuts.space/deez-nuts.mp3" type="audio/ogg">
 </body>
 </html>
