--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <audio controls autoplay>
-	  <source src="https://deeznuts.space/deez-nuts.mp3" type="audio/ogg">
+	  <source src="https://dutchpyronl.github.io/deeznuts.space/deez-nuts.mp3" type="audio/ogg">
 </body>
 </html>
